# vm-rs

./: .gitignore  CAPABILITIES.md  CHANGELOG.md  CLAUDE-REVIEW.md  COMBINED-REVIEW.md  CONTRIBUTING.md  Cargo.toml  DEEP_REVIEW.md  LICENSE  README.md  REVIEW.md  clippy.toml  codex-review.md
.github/workflows/: ci.yml  release.yml
docs/: CAPABILITIES.md
initramfs/: build.sh  default.nix  init
src/: config.rs  lib.rs  vm.rs
src/driver/: apple_vz.rs  boot.rs  cloud_hv.rs  mod.rs  ready.rs  whp.rs
src/ffi/: mod.rs
src/ffi/apple_vz/: base.rs  boot_loader.rs  entropy_device.rs  memory_device.rs  mod.rs  network_device.rs  platform.rs  serial_port.rs  shared_directory.rs  socket_device.rs  storage_device.rs  virtual_machine.rs
src/network/: bridge.rs  mod.rs  port_forward.rs  switch.rs
src/oci/: mod.rs  registry.rs  store.rs
src/setup/: image.rs  mod.rs  seed.rs  ssh.rs
src/vm/: disk.rs  manager.rs  mod.rs  platform.rs
tests/: disk_clone.rs  ffi_smoke.rs  network_switch.rs  oci_pull.rs  seed_iso.rs  vm_lifecycle.rs  vm_manager.rs
